terraform/vpc.tf

//# Create a VPC to launch instances
//resource "aws_vpc" "default" {
//  cidr_block = "10.0.0.0/16"
//}

// # Create an internet gateway to give subnet access to the outside world
//resource "aws_internet_gateway" "default" {
//  vpc_id = "${aws_vpc.default.id}"
//}

// # Grant the VPC internet access on its main route table
// resource "aws_route" "internet_access" {
//  route_table_id         = "${aws_vpc.default.main_route_table_id}"
//  destination_cidr_block = "0.0.0.0/0"
//  gateway_id             = "${aws_internet_gateway.default.id}"
//}

//# Create a subnet to launch instances
//resource "aws_subnet" "default" {
//  vpc_id                  = "${aws_vpc.default.id}"
//  cidr_block              = "10.0.1.0/24"
//  map_public_ip_on_launch = true
//}
